Add two more recipe pages and links

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/granola.html">Granola</a>
+    <a href="./recipes/kale_salad.html">Kale</a>
+    <a href="./recipes/sausage_sheet_pan.html">Sausage Sheet Pan</a>
 </body>
 </html>
