Add recipe content to granola page

--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -7,5 +7,40 @@
 </head>
 <body>
     <h1>Let's make Granola!</h1>
+    <p>This granola dish is easy to whip up in a matter of minutes! <br />
+        Prep it ahead of time and store in an airtight container for <br />
+        an easy snack!</p>
+    <p>This healthy snack will last a couple weeks if stored properly, <br />
+        but it doesn't last that long in my house!  <br />
+        My favorite way to eat this is in a bowl with some milk <br />
+        like an almost guilt-free cereal!</p>
+    <p>The ingredients listed below are very loose <br />
+        you can modify, omit, or add onto any of them!  Such as using <br />
+        honey instead of maple syrup, or any kind of nuts you have on hand.  <br />
+        Make it nut-free and just use oats and dried fruit! <br />
+        The world is your oyster!</p>
+    <p>This recipe will yield about 4 cups of granola, but that depends on <br />
+        how much you add!  I prefer to measure with the heart and just throw <br />
+        everything in.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 cup Nuts of choice (I like to use a mix)</li>
+            <li>1 cup Dry Oats</li>
+            <li>1 cup Chocolate Chips</li>
+            <li>3 tbs Flax Seed</li>
+            <li>3 tbs Chia Seed</li>
+            <li>1/2 cup Maple Syrup</li>
+            <li>1/2 cup Melted Coconut Oil</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 350</li>
+            <li>Dump all ingredients in a large bowl</li>
+            <li>Mix everything together thoroughly</li>
+            <li>Spread mixture onto a parchment lined baking sheet</li>
+            <li>bake about 25 minutes</li>
+        </ol>
+    <p>And that's it!  Let it cool and store in a cool dry space. <br />
+        But don't forget to enjoy some while its still warm!  </p>
 </body>
 </html>
