Add into paragraph to root page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>I cook for my family of five multiple times every day, so <br />
+        when it comes to the kitchen, I like to make food that is <br />
+        healthy, quick, and easy to prepare! <br />
+        The majority of the food I make is also kid approved!</p>
+    <p> The recipes below are some of our favorite foods to enjoy <br />
+        (yes, the kids love the kale!) <br />
+        And, they all take roughly ten minutes to prepare <br />
+        Win, Win!</p>
     <a href="./recipes/granola.html">Granola</a>
     <a href="./recipes/kale_salad.html">Kale</a>
     <a href="./recipes/sausage_sheet_pan.html">Sausage Sheet Pan</a>
