Add sausage sheet pan recipe contents

--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -7,5 +7,41 @@
 </head>
 <body>
     <h1>Let's make Dinner!</h1>
+    <p>One of my favorite weekday dinners is a simple sausage sheet pan.</p>
+    <p>Not only do the kids love this meal, <br />
+        but it's super easy to whip up  <br />
+        and is a great way to use up any veggies in your fridge! </p>
+    <p>I tend to use the same veggies based on what my kids like <br />
+        but you can use anything you wish! <br />
+        Same goes for the spices, <br />
+        feel free to experiment!</p>
+    <p>I like to serve this with some rice that I just <br />
+        throw into my rice cooker and top with soy and hot sauce.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 Package Smoked Sausage</li>
+            <li>1 Package Brussel Sprouts</li>
+            <li>1 Red Bell Pepper</li>
+            <li>1 tbs Olive Oil</li>
+            <li>1 tsp Salt</li>
+            <li>1 tsp Pepper</li>
+            <li>3 tsp Garlic Powder</li>
+            <li>2 tsp Onion Powder</li>
+            <li>2 tsp Smoked Paprika</li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 425</li>
+            <li>Wash and chop your produce and sausage into bite size pieces</li>
+            <li>Add everything right onto your parchment lined pan</li>
+            <li>Coat veggies with olive oil</li>
+            <li>Add the spices</li>
+            <li>Mix everything together thoroughly</li>
+            <li>Spread into even layer</li>
+            <li>bake about 25 to 30 minutes</li>
+        </ol>
+    <p>And that's it!  My kids love this, and its a great way <br />
+        to get them to eat brussel sprouts as they soak up the juices <br />
+        from the meat!  </p>
 </body>
 </html>
