Add Kale recipe content

--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -7,5 +7,35 @@
 </head>
 <body>
     <h1>Let's make Kale!</h1>
+    <p>This kale recipe is super simple, and the kids love it! <br />
+        It takes only minutes to prepare, no cooking required!</p>
+    <p>The lemon juice added to the kale, and the kneading from your hands <br />
+        tenderize the kale, making it perfectly to eat raw.  <br />
+        I make this every week! </p>
+    <p>My family like the tartness of the lemon juice added,  <br />
+        it makes it taste sweet and sour <br />
+        But that may not be for you,   <br />
+        so you can add less lemon juice and a little more oil! <br />
+        Give it a try!</p>
+    <p>This recipe will yield about 4 cups of kale, depending on the <br />
+        size of the bunch.  Keep in mind it will wilt as you kneed it</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 bunch of kale</li>
+            <li>Juice from 1/2 a lemon</li>
+            <li>2 tbs Olive Oil</li>
+            <li>1 tsp Salt</li>
+            <li>1 tsp Pepper</li>
+            <li>2 tsp Garlic Powder </li>
+        </ul>
+    <h2>Steps</h2>
+        <ol>
+            <li>Thoroughly wash the kale</li>
+            <li>Pull the kale off the stem and rip into bite size pieces</li>
+            <li>Add all ingredients in a large bowl</li>
+            <li>Kneed everything together thoroughly, scrunching the kale with your hands for several minutes</li>
+        </ol>
+    <p>And that's it!  You will see the kale wilt as you kneed it <br />
+        just give it a taste to check for desired texture and its ready to eat!  </p>
 </body>
 </html>
