--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -42,6 +42,6 @@
         </ol>
     <p>And that's it!  My kids love this, and its a great way <br />
         to get them to eat brussel sprouts as they soak up the juices <br />
-        from the meat!  </p>
+        from the meat, making them extra delicious!  </p>
 </body>
 </html>
