Add images to recipe and root pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/familyMeal.jpg">
     <p>I cook for my family of five multiple times every day, so <br />
         when it comes to the kitchen, I like to make food that is <br />
         healthy, quick, and easy to prepare! <br />
