--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Let's make Granola!</h1>
+    <img src="../images/granola.jpg">
     <p>This granola dish is easy to whip up in a matter of minutes! <br />
         Prep it ahead of time and store in an airtight container for <br />
         an easy snack!</p>
