--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Let's make Dinner!</h1>
+    <img src="../images/sausage.jpg">
     <p>One of my favorite weekday dinners is a simple sausage sheet pan.</p>
     <p>Not only do the kids love this meal, <br />
         but it's super easy to whip up  <br />
