--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Let's make Kale!</h1>
+    <img src="../images/kale.jpg">
     <p>This kale recipe is super simple, and the kids love it! <br />
         It takes only minutes to prepare, no cooking required!</p>
     <p>The lemon juice added to the kale, and the kneading from your hands <br />
