Add style sheet, background color, and adjust image size

--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Granola Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Let's make Granola!</h1>
+    <h1>Let's make a Snack!</h1>
     <img src="../images/granola.jpg">
     <p>This granola dish is easy to whip up in a matter of minutes! <br />
         Prep it ahead of time and store in an airtight container for <br />
