--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kale Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Let's make Kale!</h1>
+    <h1>Let's make a Side!</h1>
     <img src="../images/kale.jpg">
     <p>This kale recipe is super simple, and the kids love it! <br />
         It takes only minutes to prepare, no cooking required!</p>
