--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sausage Sheet pan Recipe</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Let's make Dinner!</h1>
