Add basic styling - border, div size, text size

--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Let's make a Snack!</h1>
     <img src="../images/granola.jpg">
     <p>This granola dish is easy to whip up in a matter of minutes! <br />
@@ -44,5 +45,6 @@
         </ol>
     <p>And that's it!  Let it cool and store in a cool dry space. <br />
         But don't forget to enjoy some while its still warm!  </p>
+        </div>
 </body>
 </html>
