--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Let's make a Side!</h1>
     <img src="../images/kale.jpg">
     <p>This kale recipe is super simple, and the kids love it! <br />
@@ -39,5 +40,6 @@
         </ol>
     <p>And that's it!  You will see the kale wilt as you kneed it <br />
         just give it a taste to check for desired texture and its ready to eat!  </p>
+        </div>
 </body>
 </html>
