--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Let's make Dinner!</h1>
     <img src="../images/sausage.jpg">
     <p>One of my favorite weekday dinners is a simple sausage sheet pan.</p>
@@ -45,5 +46,6 @@
     <p>And that's it!  My kids love this, and its a great way <br />
         to get them to eat brussel sprouts as they soak up the juices <br />
         from the meat, making them extra delicious!  </p>
+        </div>
 </body>
 </html>
