--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
     <h1>Odin Recipes</h1>
     <img src="./images/familyMeal.jpg">
     <p>I cook for my family of five multiple times every day, so <br />
@@ -17,8 +18,11 @@
         (yes, the kids love the kale!) <br />
         And, they all take roughly ten minutes to prepare <br />
         Win, Win!</p>
-    <a href="./recipes/granola.html">Granola</a>
-    <a href="./recipes/kale_salad.html">Kale</a>
-    <a href="./recipes/sausage_sheet_pan.html">Sausage Sheet Pan</a>
+    <ul>
+    <li><a href="./recipes/granola.html">Granola</a></li>
+    <li><a href="./recipes/kale_salad.html">Kale</a></li>
+    <li><a href="./recipes/sausage_sheet_pan.html">Sausage Sheet Pan</a></li>
+    </ul>
+    </div>
 </body>
 </html>
