Update styling - text, title, images

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         (yes, the kids love the kale!) <br />
         And, they all take roughly ten minutes to prepare <br />
         Win, Win!</p>
-    <ul>
+    <ul class="index">
+    <li><a href="./recipes/granola.html"><img class="thumbnail" src="./images/granola.jpg"></a></li>
     <li><a href="./recipes/granola.html">Granola</a></li>
+    <li><a href="./recipes/kale_salad.html"><img class="thumbnail" src="./images/kale.jpg"></a></li>
     <li><a href="./recipes/kale_salad.html">Kale</a></li>
+    <li><a href="./recipes/sausage_sheet_pan.html"><img class="thumbnail" src="./images/sausage.jpg"></a></li>
     <li><a href="./recipes/sausage_sheet_pan.html">Sausage Sheet Pan</a></li>
     </ul>
     </div>
