--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="container">
-    <h1>Let's make a Side!</h1>
+    <h1>Let's Make a Side!</h1>
     <img src="../images/kale.jpg">
     <p>This kale recipe is super simple, and the kids love it! <br />
         It takes only minutes to prepare, no cooking required!</p>
     <p>The lemon juice added to the kale, and the kneading from your hands <br />
         tenderize the kale, making it perfectly to eat raw.  <br />
         I make this every week! </p>
-    <p>My family like the tartness of the lemon juice added,  <br />
+    <p>My family likes the tartness of the lemon juice added,  <br />
         it makes it taste sweet and sour <br />
         But that may not be for you,   <br />
         so you can add less lemon juice and a little more oil! <br />
@@ -39,7 +39,7 @@
             <li>Kneed everything together thoroughly, scrunching the kale with your hands for several minutes</li>
         </ol>
     <p>And that's it!  You will see the kale wilt as you kneed it <br />
-        just give it a taste to check for desired texture and its ready to eat!  </p>
+        just give it a taste to check for desired texture and it's ready to eat!  </p>
         </div>
 </body>
 </html>
