Add home links to recipe pages

--- a/recipes/granola.html
+++ b/recipes/granola.html
@@ -45,6 +45,9 @@
         </ol>
     <p>And that's it!  Let it cool and store in a cool dry space. <br />
         But don't forget to enjoy some while its still warm!  </p>
+    <br />
+    <br />
+    <a href="../index.html">Home</a>
         </div>
 </body>
 </html>
