--- a/recipes/kale_salad.html
+++ b/recipes/kale_salad.html
@@ -40,6 +40,9 @@
         </ol>
     <p>And that's it!  You will see the kale wilt as you kneed it <br />
         just give it a taste to check for desired texture and it's ready to eat!  </p>
+    <br />
+    <br />
+    <a href="../index.html">Home</a>
         </div>
 </body>
 </html>
