--- a/recipes/sausage_sheet_pan.html
+++ b/recipes/sausage_sheet_pan.html
@@ -46,6 +46,9 @@
     <p>And that's it!  My kids love this, and its a great way <br />
         to get them to eat brussel sprouts as they soak up the juices <br />
         from the meat, making them extra delicious!  </p>
+    <br />
+    <br />
+    <a href="../index.html">Home</a>
         </div>
 </body>
 </html>
